--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "illuminate/console": "5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0",
         "mpociot/reflection-docblock": "^1.0.1",
         "ramsey/uuid": "^3.8 || ^4.0",
-        "league/fractal": "^0.20.2"
+        "league/fractal": "^0.20.2",
+        "api-ecosystem-for-laravel/dingo-api": "^4.6"
     },
     "require-dev": {
         "orchestra/testbench": "3.5.* || 3.6.* || 3.7.* || 5.1.* || ^6.0 || ^9.0",
